--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -19,9 +19,9 @@
         </ul>
         <ul class="layui-nav right" lay-filter="">
           <li class="layui-nav-item">
-            <a href="javascript:;">admin</a>
+            <a href="javascript:;">账号管理</a>
             <dl class="layui-nav-child"> <!-- 二级菜单 -->
-              <dd><a onclick="x_admin_show('个人信息','https://baike.baidu.com/item/%E9%A9%AC%E4%BA%91/6252?fr=aladdin')">个人信息</a></dd>
+              <!-- <dd><a onclick="x_admin_show('个人信息','https://baike.baidu.com/item/%E9%A9%AC%E4%BA%91/6252?fr=aladdin')">个人信息</a></dd> -->
               <dd><a href="{:url('login/logout')}">切换帐号</a></dd>
               <dd><a href="{:url('login/logout')}">退出</a></dd>
             </dl>
