--- a/application/admin/view/index/welcome.html
+++ b/application/admin/view/index/welcome.html
@@ -88,20 +88,20 @@
                 <table class="layui-table">
                     <tbody>
                         <tr>
-                            <th>xxx版本</th>
-                            <td>1.0.180420</td>
+                            <th>系统版本</th>
+                            <td>1.0.0</td>
                         </tr>
                         <tr>
                             <th>服务器地址</th>
-                            <td>x.xuebingsi.com</td>
+                            <td>chute.wero6.com</td>
                         </tr>
                         <tr>
                             <th>操作系统</th>
-                            <td>WINNT</td>
+                            <td>Linux</td>
                         </tr>
                         <tr>
                             <th>运行环境</th>
-                            <td>Apache/2.4.23 (Win32) OpenSSL/1.0.2j mod_fcgid/2.3.9</td>
+                            <td>Apache/2.4.23 (Win32) </td>
                         </tr>
                         <tr>
                             <th>PHP版本</th>
@@ -113,7 +113,7 @@
                         </tr>
                         <tr>
                             <th>MYSQL版本</th>
-                            <td>5.5.53</td>
+                            <td>5.7.00</td>
                         </tr>
                         <tr>
                             <th>ThinkPHP</th>
@@ -129,7 +129,7 @@
                         </tr>
                         <tr>
                             <th>剩余空间</th>
-                            <td>86015.2M</td>
+                            <td>30720M</td>
                         </tr>
                     </tbody>
                 </table>
